Fixed images stretching in project-header. Updated html for a bunch of shortcodes and partials

--- a/themes/navhub-v2/static/css/sass/project-header.scss
+++ b/themes/navhub-v2/static/css/sass/project-header.scss
@@ -24,11 +24,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      >* {
-        
-        flex: 1 1 50%;
-      }
-
     }
     .heading {
       line-height: 50px;
